tests/integration/errors/test_operator_undefined_on_struct.sn
# Error test: using an operator not defined on a struct is a type error

struct Point =>
    x: int
    y: int

    operator == (other: Point): bool =>
        return self.x == other.x && self.y == other.y

fn main(): void =>
    var p1: Point = Point { x: 1, y: 2 }
    var p2: Point = Point { x: 3, y: 4 }
    var result: bool = p1 < p2
    print($"{result}\n")
